--- a/ModuleData/Languages/std_module_strings_xml.xml
+++ b/ModuleData/Languages/std_module_strings_xml.xml
@@ -64,7 +64,7 @@
 		<!--
 		||||||||||||||||||||||||||| Mod Options |||||||||||||||||||||||||||
 	tdqHBqm0,CI1MWM00,nGSWgxMN,7whxjdXM,QeSRJA8B,berm45Sm,qQGhbaGz,cyJR2UBA,VwLX5pFN,AYCG7yVC,D1tufx3m,SkZJ4c5D,uOtMe3h2,V0GimxGh,E1jnTM4o,iLT745Le,sUZ33Ql4,kcZqa5DW,P9dL6ocE,IQkYJ5Es,ibaZtxH8,h703vu3F,oQcRS1c0,1dCwPqOb,AlIBmmuu,Gp9KcTuz,eoQCaS0r,GmyQQ5Cm,If18n1li,u9YiryQR,1bsT0jB0,
-	13W8p9hd,UgeDMBZE,ZaPJhkuk,Fxyb9iPM,gI3AplJv,AOnhwhiK,1J0XkdxB,Fok4pGDs
+	13W8p9hd,UgeDMBZE,ZaPJhkuk,Fxyb9iPM
 		-->
 		<!-- Main or reused headings -->
 		<string id="yRuHl3O6" text="General settings" />
@@ -101,7 +101,9 @@
 		
 		<string id="m5JmQwFt" text="Modify by situational context" />
 		<string id="0oeDqVTM" text="Specify if situational context should affect minimum required relationship, at which loyalty is ensured." />
-		
+
+		<string id="AOnhwhiK" text="Blood relation modifier" />
+		<string id="gI3AplJv" text="Flat value that will be deducted from baseline if there is a kinship with the governing clan. Default = 30 (blood relatives are loyal)." />
 		<string id="Rbo96zKF" text="Minor faction modifier" />
 		<string id="BFnZrVGK" text="Flat value that will be added to baseline if minor faction considering leaving its kingdom. Default = 10 (minor factions tend to be less loyal)." />
 		<string id="Nff6KlEn" text="Defection modifier" />
@@ -138,7 +140,10 @@
 		<string id="tCqdcDuR" text="Maximum amount, measured in millions, by which score of clan to leave kingdom may exceed threshold, not arising the need for ruler to spend gold. Default = 1.0." />
 		<string id="2JzGpjwk" text="Gold cost multiplier" />
 		<string id="6TbpFzJk" text="Multiplier for calculated gold cost to withhold the clan. Suggested value would be somewhere between 100 and 1000. Default = 1000." />
-		
+
+		<!-- Debug settings -->
+		<string id="Fok4pGDs" text="Vassal minor factions follow general rules" />
+		<string id="1J0XkdxB" text="Specify if vassal minor factions should use general logic when considering leaving their kingdoms. If disabled, minor factions will use mercenary logic even being vassals. Enabling is suggested, consider this a bug fix." />
 		<!-- Debug settings -->
 		<string id="xwz5YwZ8" text="Debug messages" />
 		<string id="uPYkZfKs" text="Enables general debug messages. These are informative and reasonably lore-friendly, but spammy. Default is false." />
@@ -146,7 +151,7 @@
 		<string id="eBVb3S6S" text="Enables technical debug messages. These are not localized, poorly readable and extremely spammy. Default is false." />
 		<!--
 	tdqHBqm0,CI1MWM00,nGSWgxMN,7whxjdXM,QeSRJA8B,berm45Sm,qQGhbaGz,cyJR2UBA,VwLX5pFN,AYCG7yVC,D1tufx3m,SkZJ4c5D,uOtMe3h2,V0GimxGh,E1jnTM4o,iLT745Le,sUZ33Ql4,kcZqa5DW,P9dL6ocE,IQkYJ5Es,ibaZtxH8,h703vu3F,oQcRS1c0,1dCwPqOb,AlIBmmuu,Gp9KcTuz,eoQCaS0r,GmyQQ5Cm,If18n1li,u9YiryQR,1bsT0jB0,
-	13W8p9hd,UgeDMBZE,ZaPJhkuk,Fxyb9iPM,gI3AplJv,AOnhwhiK,1J0XkdxB,Fok4pGDs
+	13W8p9hd,UgeDMBZE,ZaPJhkuk,Fxyb9iPM
 		-->
 	</strings>
 </base>
