--- a/ModuleData/Languages/std_module_strings_xml.xml
+++ b/ModuleData/Languages/std_module_strings_xml.xml
@@ -9,6 +9,19 @@
 		<!--
 		|||||||||||||||||||||||||| Ensured Loyalty ||||||||||||||||||||||||||
 		-->
+		<!--Lord dialog lines-->
+		<string id="v3Qivf00" text="I have no will to discuss such matters with outsiders." />
+		<string id="nWsVjhjz" text="I don't think this conversation will take us anywhere." />
+		<string id="aLEqW60A" text="I'm sorry, my friend, but I don't think this conversation will take us anywhere." />
+		<!--TooltipInfoCategories-->
+		<string id="hlIYCDRA" text="Relation with {HERO}" />
+		<string id="AuJasuJQ" text="Loyalty" />
+		<!--TooltipInfoStrings-->
+		<string id="vhJZj4an" text="Under {SERVICE_TYPE} at least for {REMAINING_DAYS} days" />
+		<string id="f0u5ZyFj" text="Loyal" />
+		<string id="oeJtbs1u" text="Rather loyal" />
+		<string id="zI5tJrm5" text="Somewhat loyal" />
+		<string id="9jecyxIV" text="Not loyal" />
 		<!--Log message about leaving or defecting-->
 		<string id="K23FeRhj" text="{CLAN_TYPE} {LEAVING_CLAN} {SERVICE_TYPE} {CURRENT_KINGDOM} is considering leaving. Value of the kingdom for them is {LEAVE_BARTERABLE}, threshold is {LEAVE_THRESHOLD}. Natively they would {CLAN_DECISION}.{ENSURED_LOYALTY_RESULT}" />
 		<string id="WNqBu5Ye" text="{CLAN_TYPE} {LEAVING_CLAN} {SERVICE_TYPE} {CURRENT_KINGDOM} is considering defecting to {TARGET_KINGDOM}. Current kingdom worth {CURRENT_BARTERABLE} for them and other kingdom is valued at {TARGET_BARTERABLE}. Natively they would {CLAN_DECISION}.{ENSURED_LOYALTY_RESULT}" />
@@ -36,7 +49,7 @@
 		<string id="TJBHPB3s" text="clan leader's relationship with {KINGDOM_LEADER} is {CHECK_RESULT} ({CURRENT_RELATION} out of required {REQUIRED_RELATION}){WITHHOLD_PRICE_INFO}" />
 		<string id="jPA16DTJ" text="clan leader's relationship with {KINGDOM_LEADER} does not affect it and clan fulfilled minimal obligations" />
 		<string id="7jtTAw2k" text="clan is under {SERVICE_TYPE} for {DAYS_UNDER_SERVICE} days out of required {REQUIRED_DAYS_UNDER_SERVICE}" />
-		<!--REASON - SERVICE_TYPE -->
+		<!--REASON OR TOOLTIP - SERVICE_TYPE -->
 		<string id="h3RHyeGO" text="oath of fealty" />
 		<string id="s3RAXuiB" text="mercenary service" />
 		<!--REASON - CHECK_RESULT -->
@@ -90,6 +103,8 @@
 		<string id="qRnwZFts" text="Period in days after joining a kingdom, during which minor faction would not even consider leaving that kingdom. Default = 63 (three quarters of a game year)." />
 		<string id="eMMKVjRU" text="Minimum mercenary service period" />
 		<string id="00arXPdi" text="Period in days after initiating mercenary service of kingdom, during which minor faction would not even consider leaving that kingdom. Default = 42 (half a game year)." />
+		<string id="Fxyb9iPM" text="Affect player conversations" />
+		<string id="ZaPJhkuk" text="Specify if ensured loyalty system should affect player conversations, making impossible to reqruit lords that are loyal to ther lieges." />
 		
 		<string id="mmUgw8hL" text="Achieve via relation" />
 		<string id="gj3cKWJo" text="Specify if reaching certain relation level with kingdom leader should make clan unreservedly loyal to that kingdom." />
@@ -99,9 +114,9 @@
 		
 		<string id="m5JmQwFt" text="Modify by situational context" />
 		<string id="0oeDqVTM" text="Specify if situational context should affect minimum required relationship, at which loyalty is ensured." />
-
+		
 		<string id="AOnhwhiK" text="Blood relation modifier" />
-		<string id="gI3AplJv" text="Flat value that will be deducted from baseline if there is a kinship with the governing clan. Default = 30 (blood relatives are loyal)." />
+		<string id="gI3AplJv" text="Flat value that will be deducted from baseline if there is a kinship with the governing clan. The same value will be added to the baseline if clan considering defecting to a kingdom, ruled by kinsman. Default = 30 (blood relatives are loyal to and tend to join their kinsfolk)." />
 		<string id="Rbo96zKF" text="Minor faction modifier" />
 		<string id="BFnZrVGK" text="Flat value that will be added to baseline if minor faction considering leaving its kingdom. Default = 10 (minor factions tend to be less loyal)." />
 		<string id="Nff6KlEn" text="Defection modifier" />
@@ -138,10 +153,13 @@
 		<string id="tCqdcDuR" text="Maximum amount, measured in millions, by which score of clan to leave kingdom may exceed threshold, not arising the need for ruler to spend gold. Default = 1.0." />
 		<string id="2JzGpjwk" text="Gold cost multiplier" />
 		<string id="6TbpFzJk" text="Multiplier for calculated gold cost to withhold the clan. Suggested value would be somewhere between 100 and 1000. Default = 1000." />
-
-		<!-- Debug settings -->
+		
+		<!-- General settings -->
 		<string id="Fok4pGDs" text="Vassal minor factions follow general rules" />
 		<string id="1J0XkdxB" text="Specify if vassal minor factions should use general logic when considering leaving their kingdoms. If disabled, minor factions will use mercenary logic even being vassals. Enabling is suggested, consider this a bug fix." />
+		<string id="UgeDMBZE" text="Advanced hero tooltips" />
+		<string id="13W8p9hd" text="Enable adding additional info to hero tooltips in game Encyclopedia. Adds info about relations, loyalty etc - depending on enabled systems." />
+		
 		<!-- Debug settings -->
 		<string id="xwz5YwZ8" text="Debug messages" />
 		<string id="uPYkZfKs" text="Enables general debug messages. These are informative and reasonably lore-friendly, but spammy. Default is false." />
